Fixed table overflow

--- a/Rotations/Garner Lab/Presentation/style.css
+++ b/Rotations/Garner Lab/Presentation/style.css
@@ -162,6 +162,8 @@ th {
 td {
   font-size: 0.8em;
   font-family: monospace;
+  height: auto;
+  x-overflow: hidden;
 }
 
 pre.alt {
